fixed images on mobile

--- a/style.css
+++ b/style.css
@@ -541,6 +541,10 @@ a {
     display: block;
   }
 
+  .card img {
+    height: auto;
+  }
+
   .about {
     text-align: center;
     margin-bottom: 150px;
